<resources>
    <string name="app_name">College</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="button2">ATTENDANCE</string>
    <string name="button3">STUDY MATERIAL</string>
    <string name="bt">DATE</string>
    <string name="bt2">TIME</string>
    <string name="bt3">SUBMIT</string>
    <string name="textView3">SELECT SECTION</string>
    <string name="tv">1DS16CS</string>

    <string name="et2">ENTER TIME</string>
    <string name="et">ENTER DATE</string>
    <string name="PRESENT">PRESENT</string>
    <string name="ABSENT">ABSENT</string>
    <string name="Q1">Enter Question and Answer</string>
    <string name="b">STUDENT</string>
    <string name="at">AT</string>
    <string name="n">NOTES</string>
    <string name="usn">ENTER USN</string>
    <string name="usub">SUBMIT</string>
    <string name="t">Data</string>
    <string name="ga">GET ATTENDANCE</string>
    <string name="f">Get Notes</string>
    <string name="e">Text</string>
    <string name="sub">SUBMIT</string>


</resources>
