<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.college.PresentActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/bt3"
        android:layout_marginTop="36dp"
        android:text="@string/tv" />

    <Button
        android:id="@+id/PRESENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="52dp"
        android:text="@string/PRESENT" />

    <Button
        android:id="@+id/ABSENT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/PRESENT"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/tv"
        android:layout_toRightOf="@+id/tv"
        android:text="@string/ABSENT" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/bt3" />
</RelativeLayout>
